FractalJDE 5.42.0
A shell, so nothing has to stand in front of a program.

usr/bin had a .cmd and a .sh beside each tool. CreateProcess wants a PE image and every
program here is a Mach-O, so the only thing cmd.exe could ever run was a batch file
standing in front of one, and putting usr/bin on its path made typing sw_vers work by
running a script that ran the loader. That is not what typing the name of a program means,
and it is the same shape that came out of the bundles a version ago.

bin/sh is a program on this volume like the others. What it does with a name is look in
usr/bin and bin and hand what it finds to the loader, the way the desktop starts anything.
It falls through to the machine underneath for what the volume does not have, so ver and
git still work, and the volume comes first: somebody standing in this system who types
mdfind means this one. cd, pwd and exit are its own, and it reads quoted words so a path
with a space in it is one argument.

The Terminal starts it in a console of its own, which is the part the runtime cannot ask
for: it will start a process and say nothing about its console. Console32 calls
CreateProcessW with CREATE_NEW_CONSOLE, and takes wShowWindow with it, so a console can
start hidden and be shown once it is where it belongs rather than appearing somewhere else
first. The console is a real one, hosted by conhost, which is what keeps a screen reader
reading it as a terminal rather than as text somebody drew.

Dyld says what command starts an image, for a program in a bundle and for one that is not.
A tool gets the runtime that keeps its console, since everything it has to say it says in
lines; a program with a window of its own gets the one with no console, because a console
opening behind every program would be a window nobody asked for.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>